--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,6 @@
 <resources>
     <string name="app_name">Playground</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_notification">NotificationActivity</string>
+    <string name="title_activity_notification">Notification Activity</string>
+    <string name="title_activity_notification_result">Notification Result</string>
 </resources>
